<resources>
    <string name="app_name" translatable="false">MP Manager</string>
    <string name="success_saved">File saved successfully to %s</string>
    <string name="enable_logs" >Save logs</string>
    <string name="sign_apk_after_merge">Sign the APK after merging</string>
    <string name="signing">Signing %1$s</string>
    <string name="saving">Saving…</string>
    <string name="saving_x">Saving %1$s…</string>
    <string name="searching">Searching files…</string>
    <string name="select">Select</string>
    <string name="settings">Settings</string>
    <string name="close">Close</string>
    <string name="warning">Warning</string>
    <string name="copy_log">Copy log</string>
    <string name="app_icon_list_label">App icon</string>
    <string name="show_icons">Show icons in app list</string>
    <string name="merge_splits">Merge/AntiSplit split apps by default</string>
    <string name="show_last_updated">Show last updated date</string>
    <string name="show_first_install">Show first installed date</string>
    <string name="show_pkg">Show package name</string>
    <string name="show_app">Show app name</string>
    <string name="show_v_code">Show version code</string>
    <string name="show_v_name">Show version name</string>
    <string name="filter">Filter</string>
    <string name="warn_sign">After merging, the original signature of an APK will be invalid and it must be signed in order to install it. This will break updating the app from official sources. Some apps verify the signature of the APK or take other measures to check if the app was modified, which may cause it to crash on startup.</string>
    <string name="user_apps">User apps</string>
    <string name="system_apps">System apps</string>
    <string name="share_apk">Share APK</string>
    <string name="display_nfo">Display information</string>
    <string name="display_functions">Display functions</string>
    <string name="confirm">Confirm</string>
    <string name="black_theme">Black theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="light_theme">Light theme</string>
    <string name="system_theme">System theme</string>
    <string name="func">Functionality</string>
    <string name="pkg_name_save">Save files with package name instead of app name</string>
    <string name="split">Split</string>
    <string name="adding">Adding %1$s</string>
    <string name="adding_to">Adding %1$s to %2$s</string>
    <string name="extracting">Extracting %1$s</string>
    <string name="extracting_to">Extracting %1$s to %2$s</string>
    <string name="android_ver_text">%1$s (SDK %2$d)</string>
    <string name="menu">menu\n</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="file_options">File Options</string>
    <string name="public_xml">(optional) Select resource ids XML file (public.xml)</string>
    <string name="clean_meta">Cleans META-INF directory along with signature block</string>
    <string name="fix_types">Correct resource type names based on usages and values</string>
    <string name="force_delete_output_path">Force delete output path</string>
    <string name="skip_manifest_protection">Skip Manifest Protection</string>
    <string name="confuse_zip_structure">Confuse Zip Structure</string>
    <string name="dex_protection_level">Dex Protection Level</string>
    <string name="copying">"Copying %1$s"</string>
    <string name="enter_name_for_copy">Enter new name for copy</string>
    <string name="signing_">signing %1$s</string>
    <string name="signed">Signed %1$s</string>
    <string name="deleting">Deleting %1$s</string>
    <string name="compressing">Compressing</string>
    <string name="compress">Compress</string>
    <string name="hist">Search History</string>
    <string name="filename">File name</string>
    <string name="install_location">Install Location</string>
    <string name="version_code">Version Code</string>
    <string name="version_name">Version Name</string>
    <string name="minimum_android_version">Minimum Android Version</string>
    <string name="change_app_launcher_icon">Change App Launcher Icon</string>
    <string name="appname">App Name</string>
    <string name="edit_all_ac">Edit All Activities / Properties From Manifest</string>
    <string name="auto_sign">Auto Sign</string>
    <string name="sign_set">Sign Settings</string>
    <string name="target_android_version">Target Android Version</string>
    <string name="compression_level">Compression Level</string>
    <string name="compress_level_no_compression">Store only (no compression)</string>
    <string name="compress_level_fastest">Fastest</string>
    <string name="compress_level_faster">Faster</string>
    <string name="compress_level_fast">Fast</string>
    <string name="compress_level_medium_fast">Medium-fast</string>
    <string name="compress_level_normal">Normal</string>
    <string name="compress_level_higher">Higher</string>
    <string name="compress_level_maximum">Maximum</string>
    <string name="compress_level_pre_ultra">Near ultra</string>
    <string name="compress_level_ultra">Ultra</string>
    <string name="update_mode">Update mode</string>
    <string name="replace_all">Replace All</string>
    <string name="update_and_replace">Update and replace</string>
    <string name="skip_all">Skip all</string>
    <string name="output_exists_title">File already exists</string>
    <string name="output_exists_msg">\"%1$s\" already exists.</string>
    <string name="add_to_existing">Add to existing</string>
    <string name="create_new_file">Create new</string>
    <string name="confirm_add_to_zip_f">Are you sure you want to add %1$s to %2$s?</string>
    <string name="plus_n_more">and %1$d more</string>
    <string name="extract">Extract</string>
    <string name="extracting_to_folder">Extracting to %1$s</string>
    <string name="archive_format">Archive format</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="sync">Sync selected pane to unselected pane</string>
    <string name="parent_dir">Parent directory</string>
    <string name="current_folder_path">Current Folder Path</string>
    <string name="more">More</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="history">History</string>
    <string name="newFileOrFolder">New file or folder</string>
    <string name="search_activities">Search activities</string>
    <string name="framework_version">Framework Version</string>
    <string name="protectd">Protected</string>
    <string name="file_modified_x">File %1$s has been modified, do you want to update the %2$s</string>
    <string name="clone">Clone APK</string>
    <string name="pkgName">Package name</string>
    <string name="opt">Optimize APK</string>
    <string name="delete_useless_files">Delete useless files</string>
    <string name="files_to_delete">Files To Delete</string>
    <string name="add">Add</string>
    <string name="about">About</string>
    <string name="plugins_section">Plugins</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_description">A free dual pane, Material Design file manager for Android with focus on APKs and the goal to be an open source alternative to MT Manager.</string>
    <string name="about_by_author">by %1$s</string>
    <string name="about_open_source_projects">Open Source Projects Used</string>
    <string name="about_tap_for_license">Tap a project to view its license and source link</string>
    <string name="go_to">Go To</string>
    <string name="arsc_copy_id">ID</string>
    <string name="arsc_goto_id">Goto ID</string>
    <string name="translate">Translate</string>
    <string name="long_select">Long Select</string>
    <string name="link">Open link</string>
    <string name="comment">Toggle comment</string>
    <string name="share_text">Share text</string>
    <string name="customize">Customize</string>
    <string name="delete">Delete</string>
    <string name="exit">Exit</string>
    <string name="compile">Compile</string>
    <string name="preferences">Preferences</string>
    <string name="compilation_options">Compilation options</string>
    <string name="dex_version">Dex version</string>
    <string name="remove_all_debug_info">Remove all debug info</string>
    <string name="remove_debug_info_source">Remove debug info .source</string>
    <string name="auto_copy">Auto-copy command to clipboard</string>
    <string name="auto_copy_desc">Automatically copy generated command when profile is selected</string>
    <string name="profiles">Profiles</string>
    <string name="add_profile">Add Profile</string>
    <string name="match_case">Match case</string>
    <string name="regex">Use regex</string>
    <string name="search_subfolders">Search subfolders</string>
    <string name="advanced_search">Advanced search</string>
    <string name="text_in_file">Text inside file</string>
    <string name="sizebytes">File Size (bytes)</string>
    <string name="min_size_hint">Minimum file size</string>
    <string name="max_size_hint">Maximum file size</string>
    <string name="password_manager_title">Password manager</string>
    <string name="password_manager_description">Add your usual passwords here. When extracting an encrypted archive they are tried in order, and you are only asked if none of them work. While compressing you can pick one instead of typing it. With a NodeWarden vault connected the list is backed up there automatically and restored when this list is empty.</string>
    <string name="password_manager_recent_header">Recent match</string>
    <string name="password_manager_no_match">No records yet</string>
    <string name="password_manager_empty">No passwords saved yet</string>
    <string name="password_manager_add">Add password</string>
    <string name="ed_menu_navigation">Navigation</string>
    <string name="ed_menu_undo">Undo</string>
    <string name="ed_menu_redo">Redo</string>
    <string name="ed_menu_edit">Edit</string>
    <string name="ed_menu_copy_line">Copy line</string>
    <string name="ed_menu_cut_line">Cut line</string>
    <string name="ed_menu_delete_line">Delete line</string>
    <string name="ed_menu_empty_line">Empty line</string>
    <string name="ed_menu_replace_line">Replace line</string>
    <string name="ed_menu_duplicate_line">Duplicate line</string>
    <string name="ed_menu_uppercase">Convert to uppercase</string>
    <string name="ed_menu_lowercase">Convert to lowercase</string>
    <string name="ed_menu_increase_indent">Increase Indent</string>
    <string name="ed_menu_decrease_indent">Decrease Indent</string>
    <string name="ed_menu_toggle_comment">Toggle comment</string>
    <string name="ed_menu_more">More</string>
    <string name="ed_menu_smali2java">Smali to Java</string>
    <string name="ed_menu_instruction_query">Instructions query</string>
    <string name="ed_menu_jump_to_line">Jump to line</string>
    <string name="ed_menu_wrap_word">Wrap word</string>
    <string name="ed_menu_read_only">Read-only mode</string>
    <string name="ed_menu_preference">Preference</string>
    <string name="xlate_source_language">Translate from</string>
    <string name="xlate_apply">Apply translations</string>
    <string name="xlate_run">Run engine</string>
    <string name="xlate_settings">Translation settings</string>
    <string name="xlate_glossary">Offline glossary</string>
    <string name="xlate_revert">Discard changes</string>
    <string name="xlate_add_config">Add config</string>
    <string name="xlate_copy_config">Copy config</string>
    <string name="xlate_delete_config">Delete config</string>
    <string name="bw_section">Bitwarden vault</string>
    <string name="bw_not_connected">Not connected</string>
    <string name="bw_connect">Connect</string>
    <string name="bw_logout">Log out</string>
</resources>