<?xml version="1.0" encoding="utf-8"?>
<!-- This is a modified version of AXMLPrinter2(By Google) library. Check out how many changes are made at https://github.com/developer-krushna/AXMLPrinter by (@developer-krushna) -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_navigation"
        android:id="@+id/navigation"
        android:title="@string/ed_menu_navigation"
        app:showAsAction="always" />
    <item
        android:icon="@drawable/ic_undo_grey"
        android:id="@+id/undo"
        android:title="@string/ed_menu_undo"
        app:showAsAction="always" />
    <item
        android:icon="@drawable/ic_redo_grey"
        android:id="@+id/redo"
        android:title="@string/ed_menu_redo"
        app:showAsAction="always" />
    <item
        android:icon="@drawable/ic_save"
        android:id="@+id/save"
        android:title="@string/save"
        app:showAsAction="always" />
    <item
        app:showAsAction="always"
        android:icon="@drawable/ic_edit_mt"
        android:id="@+id/edit_menu"
        android:title="@string/ed_menu_edit">
        <menu>
            <item
                android:id="@+id/copy_line"
                android:icon="@drawable/ic_copy_mt"
                android:title="@string/ed_menu_copy_line" />
            <item
                android:id="@+id/cut_line"
                android:icon="@drawable/ic_cut_mt"
                android:title="@string/ed_menu_cut_line" />
            <item
                android:id="@+id/delete_line"
                android:icon="@drawable/ic_delete_mt"
                android:title="@string/ed_menu_delete_line" />
            <item
                android:id="@+id/empty_line"
                android:icon="@drawable/ic_empty_mt"
                android:title="@string/ed_menu_empty_line" />
            <item
                android:icon="@drawable/ic_replace_mt"
                android:title="@string/ed_menu_replace_line" />
            <item
                android:id="@+id/duplicate_line"
                android:icon="@drawable/ic_duplicate_mt"
                android:title="@string/ed_menu_duplicate_line" />
            <item
                android:id="@+id/convert_uppercase"
                android:icon="@drawable/ic_uppercase_mt"
                android:title="@string/ed_menu_uppercase" />
            <item
                android:id="@+id/convert_lowercase"
                android:icon="@drawable/ic_lowercase_mt"
                android:title="@string/ed_menu_lowercase" />
            <item
                android:id="@+id/increase_indent"
                android:icon="@drawable/ic_right_arrow_mt"
                android:title="@string/ed_menu_increase_indent" />
            <item
                android:id="@+id/decrease_indent"
                android:icon="@drawable/ic_left_arrow_mt"
                android:title="@string/ed_menu_decrease_indent" />
            <item
                android:id="@+id/toggle_comment"
                android:icon="@drawable/ic_hash_mt"
                android:title="@string/ed_menu_toggle_comment" />
        </menu>
    </item>
    <item
        app:showAsAction="always"
        android:icon="@drawable/ic_more_mt"
        android:title="@string/ed_menu_more">
        <menu>
            <item
                android:id="@+id/smali2java"
                android:icon="@drawable/ic_java_mt"
                android:title="@string/ed_menu_smali2java" />
            <item
                android:id="@+id/smali_instruction"
                android:icon="@drawable/ic_instruction_query_mt"
                android:title="@string/ed_menu_instruction_query" />    
            <item
                android:id="@+id/jumpToLine"
                android:icon="@drawable/ic_jump_line_mt"
                android:title="@string/ed_menu_jump_to_line" />
            <group android:checkableBehavior="all">
                <item
                    android:id="@+id/wrap_text"
                    android:icon="@drawable/ic_wrap_text_mt"
                    android:checked="false"
                    android:title="@string/ed_menu_wrap_word" />
                <item
                    android:id="@+id/read_only"
                    android:icon="@drawable/ic_eye_mt"
                    android:checked="false"
                    android:title="@string/ed_menu_read_only" />
            </group>
            <item
                android:id="@+id/preference"
                android:icon="@drawable/ic_setting_mt"
                android:title="@string/ed_menu_preference" />
            <item
                android:id="@+id/close"
                android:icon="@drawable/ic_close_mt"
                android:title="@string/close" />
        </menu>
    </item>
</menu>