<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.github.abdurazaaqmohammed.commandhelper.SettingsDialogFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:text="@string/settings"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <CheckBox
            android:id="@+id/autoCopyCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auto_copy" />

        <TextView
            android:id="@+id/autoCopyDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/auto_copy_desc"
            android:textAppearance="?android:textAppearanceSmall" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:text="@string/profiles"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/profileListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:choiceMode="none"
        android:divider="?android:attr/listDivider"
        android:dividerHeight="1dp" />

    <Button
        android:id="@+id/addProfileBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/add_profile" />

</LinearLayout>